tests/anytype_invalid_position_bad.stderr
tests/anytype_invalid_position_bad.sl:3:8: error: SL2079: anytype is only allowed in function parameter positions
