tests/anytype_invalid_position_bad.sl
fn main() {
	var x anytype = 1
	_ = x
}
